force-app/main/default/objects/kfsell__Business_Rules__c/kfsell__Business_Rules__c.object-meta.xml
<CustomObject>
    <label>Business Rules</label>
    <nameField>
        <displayFormat>BR- {00000}</displayFormat>
        <label>Business Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>