force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__Br_platform_Id__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Br_platform_Id__c</fullName>
    <label>Br platform Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>