force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__Number_of_Days_Before_Meeting__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Number_of_Days_Before_Meeting__c</fullName>
    <label>Number of Days Before Meeting</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>