force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__Opportunity_Stage_Global__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Opportunity_Stage_Global__c</fullName>
    <label>Opportunity Stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>