force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__Opty_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Opty_Amount_1__c</fullName>
    <label>Opty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>