force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__Opty_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Opty_Stage_2__c</fullName>
    <label>Opty Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>