force-app/main/default/objects/kfsell__Business_Rules__c/fields/kfsell__OptyStage_BS_Req_Rev_Range__c.field-meta.xml
<CustomField>
    <fullName>kfsell__OptyStage_BS_Req_Rev_Range__c</fullName>
    <label>Opportunity Stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>