force-app/main/default/objects/kfsell__Business_Rules__c/recordTypes/kfsell__Custom.recordType-meta.xml
<RecordType>
    <fullName>kfsell__Custom</fullName>
    <active>true</active>
    <label>Custom</label>
</RecordType>