force-app/main/default/objects/kfsell__Business_Rules__c/recordTypes/kfsell__Default.recordType-meta.xml
<RecordType>
    <fullName>kfsell__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>