force-app/main/default/objects/kfsell__Business_Rules__c/recordTypes/kfsell__Record_Type.recordType-meta.xml
<RecordType>
    <fullName>kfsell__Record_Type</fullName>
    <active>true</active>
    <label>Record Type</label>
</RecordType>