force-app/main/default/objects/kfsell__Business_Rules__c/listViews/kfsell__All.listView-meta.xml
<ListView>
    <fullName>kfsell__All</fullName>
    <columns>NAME</columns>
    <columns>kfsell__Business_Rule_Name__c</columns>
    <columns>kfsell__IsActive__c</columns>
    <columns>kfsell__Business_Rule_Catagory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>